crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_this_property_access.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @5:5-5:25
    v1 = field.get v0, T::count  ; int
    release v0
    return v1
}
