crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_throw_builds_an_exception_object_and_enters_its_landing_block.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @2:1-2:30
    v0 = const.str "boom"  ; string
    v1 = const.null  ; null
    v2 = tag v1  ; tagged
    v3 = new LogicError via Throwable::constructor(v0, v2) ! bb1  ; object
    v4 = field.get v3, Throwable::location  ; string
    release v4
    v5 = const.str "t.nvs:2"  ; string
    field.set v3, Throwable::location, v5
    throw v3 -> bb2
  bb1:
    propagate "<script>() at t.nvs:2"
  bb2:
    propagate "<script>() at t.nvs:2"
}
